Networkpolicy/deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: pod1
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: pod1
