Networkpolicy/ingress-web1.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web1-allow-external
spec:
  podSelector:
    matchLabels:
      app: web1
  ingress:
  - {}
